# ollama-like-api-server

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo.toml  output.json
src/: main.rs
