[package]
name = "rust-chat-endpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls" ] }
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.9.1", features = ["v4"] }
chrono = "0.4"
bytes = "1.4"
